<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <RadioGroup
        android:id="@+id/time_type_selection_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/seconds_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/seconds"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/minutes_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/minutes"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/hours_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/hours"
            android:textColor="@android:color/white" />
    </RadioGroup>

    <EditText
        android:id="@+id/input_interval_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_hint"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp" />

    <Button
        android:id="@+id/start_alarm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/start_alarm"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/stop_alarm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/stop_alarm"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
</LinearLayout>